// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> it renders List 1`] = `
<div>
  <div
    class="mfui-list mfui-list_color_default mfui-list_weight_regular"
  >
    <ul
      class="mfui-list__inner mfui-list__inner_type_ul"
    >
      <li
        class="mfui-list-item"
      />
    </ul>
  </div>
</div>
`;

exports[`<List /> it renders List with type ol 1`] = `
<div>
  <div
    class="mfui-list mfui-list_color_default mfui-list_weight_regular"
  >
    <ol
      class="mfui-list__inner mfui-list__inner_type_ol"
    >
      <li
        class="mfui-list-item"
      />
    </ol>
  </div>
</div>
`;
